--- a/src/stylesheets/galleries.scss
+++ b/src/stylesheets/galleries.scss
@@ -38,31 +38,6 @@ p{
 }
 
 
-/*Nav*/
-
-body {
-    margin: 0;
-}
-.navbar-toggler{
-    background-color: $secondaryaccent;
-    border: none;
-}
-
-.navbar {
-    margin: 0;
-    padding: 0;
-    background-color: $footerheader;
-    color: $text;
-  }
-  
-  .navbar-brand, .nav-link {
-    color: $text ; 
-    transition: color 0.3s ease; 
-  }
-  
-  .navbar-brand:hover, .nav-link:hover {
-    color: $secondaryaccent;
-  }
 
 /*Album Covers*/
   
@@ -104,7 +79,35 @@ body {
 .portfolio-box:hover .portfolio-info-2 {
     opacity: 1;
 }
-  
+@media (max-width: 767px) {
+    .portfolio-box {
+        height: auto;
+    }
+
+    .portfolio-box img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        opacity: 1;
+    }
+
+    .portfolio-box:hover img {
+        opacity: 1;
+    }
+
+    .portfolio-info-2 {
+        opacity: 1;
+        position: static;
+        background-color: $secondaryaccent;
+    }
+
+    .portfolio-info-2 h2 {
+        margin: 0;
+        padding: 10px;
+    }
+}
+
+
 .portfolio-info-2 h2 {
     margin: 0;
 }
