--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -20,14 +20,14 @@ footer {
   color: $text;
   padding: 20px 0;
   margin-top: 20px;
-}
 
-footer p {
-  margin: 0;
-}
+  p {
+      margin: 0;
+  }
 
-footer form {
-  align-items: center;
+  form {
+      align-items: center;
+  }
 }
 
 .contact-faq{
