--- a/src/stylesheets/individualpages.scss
+++ b/src/stylesheets/individualpages.scss
@@ -77,9 +77,10 @@ p {
 
     img {
         max-width: 100%;
-        height: auto;
+        height: 500px;
         border: solid $primaryaccent 3px;
         border-radius: 20px;
+
         
     }
 
